<resources>
    <string name="app_name">ANBapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_error_message">Error</string>
    <string name="login_error">Login should be at list 2 signs</string>
    <string name="name_error">Name should be at list 2 signs</string>
    <string name="password_error">Passwords should be the same</string>
    <string name="password_length_error">Passwords should be at least 6 signs</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="check_password">Check Password</string>
    <string name="sign_in">Sign In</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="Profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="default_site" translatable="false">www.google.com</string>
    <string name="coala_text" translatable="false">Коала — это небольшой зверек. Длина взрослого самца около 80 см, а весит он приблизительно 15 кг. Самки немного меньше. Шерстка коал обычно серого цвета, с вкраплениями белого и иногда черного тона. Уши достаточно крупные, а глаза, наоборот, небольшие. Нос выпуклый, черного цвета. Конечности коалы полностью приспособлены для лазания по деревьям. На передних лапах у них пять пальцев — два находятся немного в стороне (как большие пальцы у людей).</string>
    <string name="up">наверх</string>
    <string name="empty_posts">Здесь пока нет постов. Создайте новый :)</string>
    <string name="Location">Location</string>
    <string name="Link">Link</string>
    <string name="online">online</string>
    <string name="save">save</string>
    <string name="job">job</string>
    <string name="google_inc">google_inc</string>
    <string name="position">position</string>
    <string name="mob_developer">mob_developer</string>
    <string name="start_job">start_job</string>
    <string name="default_date">default_date</string>
    <string name="end_job">end_job</string>
    <string name="web_site">web_site</string>
    <string name="google_com">google_com</string>
    <string name="share_name">%1%s делится мероприятием:\n
                        %2%s \n.
                        Начало %3%s \n
                        вложение: %4%s \n
                        сайт: %5%s\n
                        отправлено из ANBApp.\n
                        чтобы скачать приложение пройдите по ссылке: \n
                       %6%s</string>
    <string name="post_name">%1%s делится постом:\n
                        %2%s \n.
                        вложение: %3%s \n
                        сайт: %4%s\n
                        отправлено из ANBApp.\n
                        чтобы скачать приложение пройдите по ссылке: \n
                        %5%s</string>
    <string name="posts">posts</string>
    <string name="events">events</string>
    <string name="jobs">jobs</string>
</resources>